--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,18 @@
 *.exe
 *.out
 *.app
+
+# Build artifacts
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+
+/bin/
+/3rdparty/curl-7.40.0.tar.gz
+/3rdparty/curl-7.40.0/
+/3rdparty/libarchive-3.1.2.tar.gz
+/3rdparty/libarchive-3.1.2/
+/3rdparty/stamp/
+/3rdparty/tmp/
+/3rdparty/usr/
