Stub out run command

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,14 @@ add_subdirectory(3rdparty)
 include_directories(src)
 include_directories(${3RDPARTY_USR}/include)
 
-#find_library(LIB_ARCHIVE NAMES archive PATHS ${3RDPARTY_USR}/lib)
+#find_library(LIB_ARCHIVE NAMES archive
+#  NO_DEFAULT_PATH
+#  NO_CMAKE_ENVIRONMENT_PATH
+#  NO_CMAKE_PATH
+#  NO_SYSTEM_ENVIRONMENT_PATH
+#  NO_CMAKE_SYSTEM_PATH
+#  NO_CMAKE_FIND_ROOT_PATH
+#  PATHS ${3RDPARTY_USR}/lib)
 set(LIB_ARCHIVE iconv lzma bz2 z xml2 ${3RDPARTY_USR}/lib/libarchive.a)
 
 find_library(LIB_CURL NAMES curl PATHS ${3RDPARTY_USR}/lib)
