container: Initial containerization commit.
WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,18 @@ include_directories(${3RDPARTY_USR}/include)
 #  NO_CMAKE_SYSTEM_PATH
 #  NO_CMAKE_FIND_ROOT_PATH
 #  PATHS ${3RDPARTY_USR}/lib)
-set(LIB_ARCHIVE iconv lzma bz2 z xml2 ${3RDPARTY_USR}/lib/libarchive.a)
+set(LIB_ARCHIVE lzma bz2 z xml2 ${3RDPARTY_USR}/lib/libarchive.a)
 
+find_library(LIB_CRYPTO NAMES crypto)
 find_library(LIB_CURL NAMES curl PATHS ${3RDPARTY_USR}/lib)
 
 
-file(GLOB NSCN_SOURCES src/nosecone/executor/*.cpp src/nosecone/command/*.cpp src/nosecone/*.cpp)
+file(GLOB NSCN_SOURCES
+  src/nosecone/executor/container/*.cpp
+  src/nosecone/executor/*.cpp
+  src/nosecone/command/*.cpp
+  src/nosecone/*.cpp)
 
 add_executable(nscn ${NSCN_SOURCES})
-target_link_libraries(nscn ${LIB_ARCHIVE} ${LIB_CURL})
+target_link_libraries(nscn ${LIB_ARCHIVE} ${LIB_CURL} ${LIB_CRYPTO})
 
