--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,18 +10,12 @@ add_subdirectory(3rdparty)
 include_directories(src)
 include_directories(${3RDPARTY_USR}/include)
 
-#find_library(LIB_ARCHIVE NAMES archive
-#  NO_DEFAULT_PATH
-#  NO_CMAKE_ENVIRONMENT_PATH
-#  NO_CMAKE_PATH
-#  NO_SYSTEM_ENVIRONMENT_PATH
-#  NO_CMAKE_SYSTEM_PATH
-#  NO_CMAKE_FIND_ROOT_PATH
-#  PATHS ${3RDPARTY_USR}/lib)
-set(LIB_ARCHIVE lzma bz2 z xml2 ${3RDPARTY_USR}/lib/libarchive.a)
-
 find_library(LIB_CRYPTO NAMES crypto)
+find_library(LIB_LZMA NAMES lzma)
+find_library(LIB_BZ2 NAMES bz2)
+find_library(LIB_Z NAMES z)
 find_library(LIB_CURL NAMES curl PATHS ${3RDPARTY_USR}/lib)
+find_library(LIB_ARCHIVE NAMES archive PATHS ${3RDPARTY_USR}/lib)
 
 
 file(GLOB NSCN_SOURCES
@@ -31,5 +25,5 @@ file(GLOB NSCN_SOURCES
   src/nosecone/*.cpp)
 
 add_executable(nscn ${NSCN_SOURCES})
-target_link_libraries(nscn ${LIB_ARCHIVE} ${LIB_CURL} ${LIB_CRYPTO})
+target_link_libraries(nscn ${LIB_ARCHIVE} ${LIB_CURL} ${LIB_CRYPTO} ${LIB_LZMA} ${LIB_BZ2} ${LIB_Z})
 
