Remvoe third-party builds and use system packages for curl and libarchive

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,21 +8,18 @@ if (CMAKE_COMPILER_IS_GNUCXX AND
   message(FATAL_ERROR "Nose Cone requires GCC version >= ${GNUCXX_MINIMUM_VERSION}")
 endif()
 
-set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -pedantic")
-set(CMAKE_CXX_FLAGS_DISTRIBUTION "-O3")
+set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -pedantic ")
+set(CMAKE_CXX_FLAGS_DISTRIBUTION "-O3 -flto ")
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
-add_subdirectory(3rdparty)
-
 include_directories(src)
-include_directories(${3RDPARTY_USR}/include)
 
 find_library(LIB_CRYPTO NAMES crypto)
 find_library(LIB_LZMA NAMES lzma)
 find_library(LIB_BZ2 NAMES bz2)
 find_library(LIB_Z NAMES z)
-find_library(LIB_CURL NAMES curl PATHS ${3RDPARTY_USR}/lib)
-find_library(LIB_ARCHIVE NAMES archive PATHS ${3RDPARTY_USR}/lib)
+find_library(LIB_CURL NAMES curl)
+find_library(LIB_ARCHIVE NAMES archive)
 
 file(GLOB NSCN_SOURCES
   src/nosecone/executor/container/*.cpp
@@ -33,4 +30,3 @@ file(GLOB NSCN_SOURCES
 add_executable(nscn ${NSCN_SOURCES})
 target_link_libraries(nscn ${LIB_ARCHIVE} ${LIB_CURL} ${LIB_CRYPTO} ${LIB_LZMA} ${LIB_BZ2} ${LIB_Z})
 
-add_dependencies(nscn _get_libarchive _get_libcurl)
